Add Swagger generation to the service. Fixes #2
