# interface/swagger.yaml
@@ -1,69 +1,368 @@
----
-swagger: "2.0"
+swagger: '2.0'
 info:
-  version: "0.1"
-  title: "MARS GIS import"
-  description: "The GIS import service for the microservice based MARS framework"
+  description: Api Documentation
+  version: '1.0'
+  title: Api Documentation
+  termsOfService: 'urn:tos'
+  contact: {}
+  license:
+    name: Apache 2.0
+    url: 'http://www.apache.org/licenses/LICENSE-2.0'
+host: 'localhost:8080'
+basePath: /
+tags:
+  - name: health
+    description: Health
+  - name: file-controller
+    description: File Controller
+  - name: basic-error-controller
+    description: Basic Error Controller
 paths:
-  /import:
-    post:
-      description: "Creates the meta data entry for a import id"
+  /error:
+    get:
+      tags:
+        - basic-error-controller
+      summary: errorHtml
+      operationId: errorHtmlUsingGET
+      consumes:
+        - application/json
       produces:
-      - "application/json"
+        - text/html
       responses:
-        201:
-          description: "created"
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ModelAndView'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+    head:
+      tags:
+        - basic-error-controller
+      summary: errorHtml
+      operationId: errorHtmlUsingHEAD
+      consumes:
+        - application/json
+      produces:
+        - text/html
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ModelAndView'
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+    post:
+      tags:
+        - basic-error-controller
+      summary: errorHtml
+      operationId: errorHtmlUsingPOST
+      consumes:
+        - application/json
+      produces:
+        - text/html
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ModelAndView'
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+    put:
+      tags:
+        - basic-error-controller
+      summary: errorHtml
+      operationId: errorHtmlUsingPUT
+      consumes:
+        - application/json
+      produces:
+        - text/html
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ModelAndView'
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+    delete:
+      tags:
+        - basic-error-controller
+      summary: errorHtml
+      operationId: errorHtmlUsingDELETE
+      consumes:
+        - application/json
+      produces:
+        - text/html
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ModelAndView'
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+    options:
+      tags:
+        - basic-error-controller
+      summary: errorHtml
+      operationId: errorHtmlUsingOPTIONS
+      consumes:
+        - application/json
+      produces:
+        - text/html
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ModelAndView'
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+    patch:
+      tags:
+        - basic-error-controller
+      summary: errorHtml
+      operationId: errorHtmlUsingPATCH
+      consumes:
+        - application/json
+      produces:
+        - text/html
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ModelAndView'
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+  /gis:
+    post:
+      tags:
+        - file-controller
+      summary: postFile
+      operationId: postFileUsingPOST
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
       parameters:
-      - name: "dataId"
-        in: "formData"
-        description: "generated by file-controller"
-        required: true
-        type: "string"
-      - name: "title"
-        in: "formData"
-        description: "specified by user"
-        required: true
-        type: "string"
-      - name: "filename"
-        in: "formData"
-        description: "the name of the file, the user uploaded"
-        required: true
-        type: "string"
-  /download/vector:
-      get:
-        description: "Creates the meta data entry for a import id"
-        produces:
-        - "application/json"
-        responses:
-          200:
-            description: "string, where the file can be downloaded"
-        parameters:
-        - name: "dataId"
-          in: "formData"
-          description: "id created during import"
+        - name: dataId
+          in: query
+          description: dataId
           required: true
-          type: "string"
-        - name: "dataName"
-          in: "formData"
-          description: "the name of the files inside the Zip file without the file extension."
+          type: string
+        - name: title
+          in: query
+          description: title
           required: true
-          type: "string"
-  /download/raster:
-      get:
-        description: "Creates the meta data entry for a import id"
-        produces:
-        - "application/json"
-        responses:
-          200:
-            description: "string, where the file can be downloaded"
-        parameters:
-        - name: "dataId"
-          in: "formData"
-          description: "id created during import"
+          type: string
+        - name: filename
+          in: query
+          description: filename
           required: true
-          type: "string"
-        - name: "title"
-          in: "formData"
-          description: "title  the title you specified during import"
+          type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+  '/gis/{dataId}':
+    get:
+      tags:
+        - file-controller
+      summary: getFile
+      operationId: getFileUsingGET
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - name: dataId
+          in: path
+          description: dataId
           required: true
-          type: "string"
+          type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+    delete:
+      tags:
+        - file-controller
+      summary: deleteFile
+      operationId: deleteFileUsingDELETE
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - name: dataId
+          in: path
+          description: dataId
+          required: true
+          type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+  /healthz:
+    get:
+      tags:
+        - health
+      summary: getHealth
+      operationId: getHealthUsingGET
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+definitions:
+  ModelAndView:
+    type: object
+    properties:
+      empty:
+        type: boolean
+      model:
+        type: object
+      modelMap:
+        type: object
+        additionalProperties:
+          type: object
+      reference:
+        type: boolean
+      status:
+        type: string
+        enum:
+          - '100'
+          - '101'
+          - '102'
+          - '103'
+          - '200'
+          - '201'
+          - '202'
+          - '203'
+          - '204'
+          - '205'
+          - '206'
+          - '207'
+          - '208'
+          - '226'
+          - '300'
+          - '301'
+          - '302'
+          - '303'
+          - '304'
+          - '305'
+          - '307'
+          - '308'
+          - '400'
+          - '401'
+          - '402'
+          - '403'
+          - '404'
+          - '405'
+          - '406'
+          - '407'
+          - '408'
+          - '409'
+          - '410'
+          - '411'
+          - '412'
+          - '413'
+          - '414'
+          - '415'
+          - '416'
+          - '417'
+          - '418'
+          - '419'
+          - '420'
+          - '421'
+          - '422'
+          - '423'
+          - '424'
+          - '426'
+          - '428'
+          - '429'
+          - '431'
+          - '451'
+          - '500'
+          - '501'
+          - '502'
+          - '503'
+          - '504'
+          - '505'
+          - '506'
+          - '507'
+          - '508'
+          - '509'
+          - '510'
+          - '511'
+      view:
+        $ref: '#/definitions/View'
+      viewName:
+        type: string
+  View:
+    type: object
+    properties:
+      contentType:
+        type: string
